fix gRPC service
